--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -21,8 +22,10 @@
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
